--- a/src/components/app-card/app-card.scss
+++ b/src/components/app-card/app-card.scss
@@ -1,16 +1,10 @@
 :host {
 
-
-
-
   a, a:visited {
     @include card;
 
     &:hover {
-      transition: all 200ms;
-      box-shadow: 15px 15px 0 #d7d7d7;
-      position: relative;
-      bottom: 2px;
+      transform: scale(1);
     }
   }
 
@@ -34,7 +28,6 @@
     .title {
       display: block;
       line-height: 20px;
-      padding: 5px 10px;
     }
   }
 }
