--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -2,8 +2,11 @@
   display: flex;
   flex-direction: column;
   border: 1px solid #fff;
-  box-shadow: $card-shadow;
   background: #fff;
   color: #000;
+  box-shadow: 10px 10px 20px #d7d7d7;
   text-decoration: none;
+  position: relative;
+  transform: scale(.98);
+  transition: all 400ms;
 }
