make prerender work, temp styles

--- a/src/components/app-card/app-card.scss
+++ b/src/components/app-card/app-card.scss
@@ -1,11 +1,14 @@
 :host {
 
-  a, a:visited {
-    @include card;
+  @include card;
 
-    &:hover {
-      transform: scale(1);
-    }
+  a, a:visited {
+    color: #000;
+    text-decoration: none;
+  }
+
+  &:hover {
+    transform: scale(1);
   }
 
   .title {
