--- a/src/components/app-root/app-root.scss
+++ b/src/components/app-root/app-root.scss
@@ -1,11 +1,14 @@
-a, a:visited {
-  color: $primary-color-inverse;
-  text-transform: uppercase;
-  text-decoration: none;
+:host {
+  a, a:visited {
+    color: $primary-color-inverse;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+
+  main {
+    max-width: 1800px;
+    margin: 0 auto;
+  }
 }
 
-main {
-  max-width: 1800px;
-  margin: 0 auto;
-  //padding: 20px;
-}
+
