--- a/src/components/app-card/app-card.scss
+++ b/src/components/app-card/app-card.scss
@@ -2,9 +2,27 @@
 
   a, a:visited {
     @include card;
+    overflow: hidden;
+    border-radius: 5px;
+
+    &:after {
+      content: "";
+      width: 200%;
+      height: 200%;
+      position: absolute;
+      background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,.1) 2%);
+      top: -200%;
+      right: -180%;
+      transform: rotate(-45deg);
+      transition: all 600ms;
+    }
 
     &:hover {
       transform: scale(1);
+      &:after {
+        right: -130%;
+        background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,.25) 2%);
+      }
     }
   }
 
